2020-XX-YY v. 2.1.t
---------------------
- Managed line feed into descriptions see https://bugs.mageia.org/show_bug.cgi?id=27274

2020-09-06 v. 2.1.0
---------------------
- Test if createMenuBar is available and create new menubar, fallback old menu buttons
- Fixed issue #158 uncategorized packages were not shown as updates with groups view
- Fixed a crash when notify2.show is invoked, removed notify2 and use pstray.notify instead
- Fixed a crash when a search is performed and select all is pressed
- Hide menu dnfdragora-update if no updates present (experimental and configurable default 
  False since it does not work in every DEs) 
- Fixed dnfdragora logging settings
- Fixed dnfdragora view when all_updates is True into settings (system configuration file)
- Fixed dnfdragora view when --update-only is passed as option
- dnfdragora-update: hide menu when running dnfdragora (experimental)
- dnfdragora-update: used a different icon to show that updates are present
- Added a message to dnfdragora-update if user force a check for updates
- Added Restore default push button to set chosen options to default values 
- Added new Otions dialog
- Added Help dialog
- Fixed loop in case of GPG key missing if OnGPGImport is not received
- Removed MenuButtons and added MenuBar and new menus
- Cleaning info text if got empty result searching
- Added use of python regular expression  if searching into package names or summaries.
  Search is performed into cached packages.

2020-06-17 v. 2.0.4
---------------------
- Fixed regression on starting --update that didn't honour updates filter
- Default view at first running is Groups and All, added for Fedora packager the option into
  system settings (/et/dnfdragora/dnfdragora.yaml) option all_updates to change this behaviour
  and show All the packages with To_update filter see dnfdragora.yaml.example
- try to avoid crash on exit from dnfdragora-update (https://bugzilla.redhat.com/show_bug.cgi?id=1839784