@@ -1,6 +1,7 @@
 2020-XX-YY v. 2.1.t
 ---------------------
 - Managed line feed into descriptions see https://bugs.mageia.org/show_bug.cgi?id=27274
+- Added an user preference to consider upgrades as updates (issue #163)
 
 2020-09-06 v. 2.1.0
 ---------------------
